[package]
name = "activities"
version = "0.1.0"
authors = ["Jayson Lennon<jayson@jaysonlennon.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/mylib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
colored = "2.1"
color-eyre = "0.6"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tempfile = "3"
thiserror = "1"
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
testresult = "0.4"
