[package]
name = "activities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/mylib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
colored = "2.1"
color-eyre = "0.6"
crossbeam-channel = "0.5"
parking_lot = "0.12"
thiserror = "1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
testresult = "0.4"

