[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"]}
derive_more = "0.99"
rand = "0.8"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
handlebars = { version = "4", features = ["dir_source"]}
rocket = { version = "0.5.0-rc.1", features = ["json"]}
structopt = "0.3"
dotenv = "0.15"
tokio = "1.8.0"
crossbeam-channel = "0.5"
parking_lot = "0.11"
base64 = "0.13"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
strum = { version = "0.21", features = ["derive"] }