[package]
name = "track"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["env", "derive"] }
dirs = "5.0.1"
error-stack = "0.5.0"
humantime = "2.1.0"
owo-colors = "4.0.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color-auto"] }
assert_fs = { version = "1.1.2", features = ["color-auto"] }
pretty_assertions = "1.4.0"
testresult = "0.4.1"
